--- a/_layouts/page1.html
+++ b/_layouts/page1.html
@@ -7,6 +7,8 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>{{ page.title }}</title>
     <style>
+        img{max-width:100%;}
+        body {background-image: url("https://note.youdao.com/yws/api/personal/file/WEB6968e36373a1270e325ebbd8075fc64e?method=download&shareKey=b9650551edc12bbcdee06a6d3aa06953");}
         h1 {
             text-align: center;
             color: blue;
@@ -23,7 +25,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
-<body background="https://note.youdao.com/yws/api/personal/file/WEB6968e36373a1270e325ebbd8075fc64e?method=download&shareKey=b9650551edc12bbcdee06a6d3aa06953">
+<body>
     {% include navigation.html %}
     {{ content }}
 </body>
