add two new css

--- a/_layouts/page1.html
+++ b/_layouts/page1.html
@@ -7,8 +7,18 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0, user-scalable=yes">
     <title>{{ page.title }}</title>
     <style>
-        img{max-width:100%;}
-        body {background-image: url("https://note.youdao.com/yws/api/personal/file/WEB6968e36373a1270e325ebbd8075fc64e?method=download&shareKey=b9650551edc12bbcdee06a6d3aa06953");}
+        img {
+            max-width: 100%;
+        }
+
+        body {
+            background-image: url("https://note.youdao.com/yws/api/personal/file/WEB6968e36373a1270e325ebbd8075fc64e?method=download&shareKey=b9650551edc12bbcdee06a6d3aa06953");
+        }
+
+        img {
+            border-radius: 8px;
+        }
+
         h1 {
             text-align: center;
             color: blue;
