--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,41 +1,80 @@
 <!doctype html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0, user-scalable=yes">
-    <title>{{ page.title }}</title>
-    <style>
-      img{max-width:100%;}
-      body {background-image: url("https://note.youdao.com/yws/api/personal/file/WEBf80072cda656afc8dcb5c6fc4582654e?method=download&shareKey=2a808c9e2ea3ab79c5481f6501d95f58");}
-      h1
-      {text-align:center; 
-       color:blue;
-       background-color:yellow;
-       font-family:"楷体",“宋体”,“Times New Roman”;
-      }
-      h3
-      {text-align:center; 
-       background-color:rgba(10, 195, 241, 0.973);
-       font-family:"楷体",“宋体”,“Times New Roman”;
-      }
-      p
-      {padding-top:25px;
-       padding-bottom:25px;
-       padding-right:50px;
-       padding-left:50px;
-       border-style:solid dashed;
-       border-width:5px;
-       border-color:red blue;
-       margin-top:20px;
-       margin-bottom:20px;
-       margin-right:50px;
-       margin-left:50px;
-      }
-     </style>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0, user-scalable=yes">
+  <title>{{ page.title }}</title>
+  <style>
+    img {
+      max-width: 100%;
+    }
+
+    body {
+      background-image: url("https://note.youdao.com/yws/api/personal/file/WEBf80072cda656afc8dcb5c6fc4582654e?method=download&shareKey=2a808c9e2ea3ab79c5481f6501d95f58");
+    }
+
+    img {
+      border-radius: 8px;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 210px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .desc {
+      padding: 15px;
+      text-align: center;
+    }
+
+    h1 {
+      text-align: center;
+      color: blue;
+      background-color: yellow;
+      font-family: "楷体", “宋体”, “Times New Roman”;
+    }
+
+    h3 {
+      text-align: center;
+      background-color: rgba(10, 195, 241, 0.973);
+      font-family: "楷体", “宋体”, “Times New Roman”;
+    }
+
+    p {
+      padding-top: 25px;
+      padding-bottom: 25px;
+      padding-right: 50px;
+      padding-left: 50px;
+      border-style: solid dashed;
+      border-width: 5px;
+      border-color: red blue;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-right: 50px;
+      margin-left: 50px;
+    }
+  </style>
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+
+<body>
+  {% include navigation.html %}
+  {{ content }}
+</body>
+
 </html>
