--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,41 @@
       border-radius: 8px;
     }
 
+    .button {
+      background-color: #4CAF50;
+      /* 绿色 */
+      border: none;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+    }
+
+    .button1 {
+      background-color: #4CAF50;
+      border-radius: 12px;
+      font-size: 24px;
+      color: white;
+    }
+
+    .button2 {
+      background-color: #008CBA;
+      border-radius: 12px;
+      font-size: 24px;
+      color: white;
+    }
+
+    .button3 {
+      background-color: #f44336;
+      border-radius: 12px;
+      font-size: 24px;
+      color: white;
+    }
+
     .dropdown {
       position: relative;
       display: inline-block;
