--- a/_layouts/page1.html
+++ b/_layouts/page1.html
@@ -31,12 +31,43 @@
             background-color: rgba(10, 195, 241, 0.973);
             font-family: "楷体", “宋体”, “Times New Roman”;
         }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: rgb(243, 125, 125);
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover:not(.active) {
+            background-color: rgb(243, 13, 13);
+        }
+
+        .active {
+            background-color: #07f390;
+        }
     </style>
-    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
-    {% include navigation.html %}
+    <ul>
+        {% for item in site.data.navigation %}
+        <li><a href="{{ item.link }}" {% if page.url==item.link %}class= "active" {% endif %}>{{ item.name }}</a></li>
+        {% endfor %}
+    </ul>
     {{ content }}
 </body>
 
